# TrevNet_Trainer

./: CMakeLists.txt  LICENSE  README.md
GeneratorFiles/: Evaluator.xml  NetworkFactory.xml  Trainer.xml
Resources/: config.xml
TrevNet_Trainer/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
TrevNet_TrainerLib/: ArgUtils.cpp  ArgUtils.h  CMakeLists.txt  Evaluator.cpp  Evaluator.h  NetworkFactory.cpp  NetworkFactory.h  Trainer.cpp  Trainer.h
TrevNet_TrainerTests/: CMakeLists.txt
TrevNet_TrainerTests/Tests/: Evaluator_Tests.cpp  Example_Tests.cpp  NetworkFactory_Tests.cpp  Trainer_Tests.cpp
